--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ fetch_dependency( vlog "https://git.martian.ag/open-source/vlog.cbuf" "master" )
 
 find_package( hjson REQUIRED )
 
-add_library( toolbox SHARED src/file_utils.cpp src/hjson_helper )
+add_library( toolbox SHARED src/file_utils.cpp src/hjson_helper src/unix_helper)
 target_include_directories( toolbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/toolbox )
 target_include_directories( toolbox PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include )
 target_link_libraries( toolbox PUBLIC hjson vlog )
