--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package( hjson REQUIRED )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
 
-add_library( toolbox SHARED src/file_utils.cpp src/hjson_helper src/unix_helper)
+add_library( toolbox SHARED src/file_utils.cpp src/hjson_helper src/unix_helper src/stb_image_write)
 target_include_directories( toolbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/toolbox )
 target_include_directories( toolbox PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include )
 target_link_libraries( toolbox PUBLIC hjson vlog )
