--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ add_library( toolbox SHARED src/file_utils.cpp
                             src/unix_helper.cc
                             src/stb_image_write.cpp
                             src/stb_image.cpp
+                            src/tictoc.cpp
                             )
+
 set_target_properties(toolbox PROPERTIES CXX_STANDARD 17)
 target_include_directories( toolbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/toolbox )
 target_include_directories( toolbox PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include )
