--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ set(CMAKE_CXX_FLAGS
     -Wno-unused-parameter")
 
 add_library(toolbox SHARED src/file_utils.cpp src/hjson_helper.cpp src/unix_helper.cc src/stb_image_write.cpp
-                           src/stb_image.cpp src/tictoc.cpp src/perftimer.cpp)
+                           src/stb_image.cpp src/tictoc.cpp src/perftimer.cpp src/time_format.cpp)
 target_include_directories(toolbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/toolbox)
 target_include_directories(toolbox PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(toolbox PUBLIC hjson vlog stdc++fs)
