Update toolbox from monorepo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 include(FetchDependency)
 
-fetch_dependency(vlog "https://git.martian.ag/open-source/vlog.git" "master")
+fetch_dependency(vlog "https://git.martian.ag/open-source/vlog.cbuf" "master")
 
 find_package(hjson REQUIRED)
 
@@ -26,6 +26,7 @@ set(CMAKE_CXX_FLAGS
     -Wno-exit-time-destructors \
     -Wno-double-promotion")
 
+# Disable additional warnings to get stb_image_write to compile
 set(CMAKE_CXX_FLAGS
     "${CMAKE_CXX_FLAGS} \
     -Wno-old-style-cast \
@@ -49,15 +50,15 @@ add_library(
                  src/tictoc.cpp src/perftimer.cpp src/time_format.cpp src/rate.cpp)
 target_include_directories(toolbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/toolbox)
 target_include_directories(toolbox PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(toolbox PUBLIC hjson vlog stdc++fs pthread)
+target_link_libraries(toolbox PUBLIC hjson vlog stb stdc++fs pthread)
 set(toolbox_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE STRING "toolbox source path" FORCE)
 set(toolbox_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}" CACHE STRING "toolbox lib path" FORCE)
 install(TARGETS toolbox DESTINATION lib)
 
-# only build the library tests when building the library
-if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
-  enable_testing()
-  add_subdirectory(tests)
-endif()
+# only build the library tests when building the library if(${CMAKE_SOURCE_DIR} STREQUAL
+# ${CMAKE_CURRENT_SOURCE_DIR})
+enable_testing()
+add_subdirectory(tests)
+# endif()
 
 set(toolbox_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE INTERNAL "toolbox_SOURCE_DIR")
